--- a/CS5520 Final Project/GoogleService-Info.plist
+++ b/CS5520 Final Project/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>762600390470-fv5pdir49sc1u09i7a5k3tc9d1jfebk3.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.762600390470-fv5pdir49sc1u09i7a5k3tc9d1jfebk3</string>
 	<key>API_KEY</key>
 	<string>AIzaSyArm7VWR7Xt567cLSgdTxngsY0Ng9b15oc</string>
 	<key>GCM_SENDER_ID</key>
